manifests/node_server/node-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-server-svc
  labels:
    app: node-server
spec:
  selector:
    app: node-server
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
